fix(): overall fixes for files