@@ -7,6 +7,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import sbrf.practice.jsv.list.dto.files.CreateFileDto;
+import sbrf.practice.jsv.list.dto.files.FileDto;
 import sbrf.practice.jsv.list.dto.files.UpdateFileDto;
 import sbrf.practice.jsv.list.mappers.FileMapper;
 import sbrf.practice.jsv.list.model.File;
@@ -16,6 +17,7 @@ import javax.persistence.EntityNotFoundException;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,34 +26,31 @@ public class FileService {
     private final FileRepository repository;
     private final FileMapper mapper;
 
-    public List<File> findAllFiles() {
-        return repository.findAll();
+    public List<FileDto> findAllFiles() {
+        return repository.findAll().stream().map(f->mapper.fileToFileDto(f)).collect(Collectors.toList());
     }
 
-    public File findFileById(UUID id) {
-        return repository.findById(id).orElseThrow(() -> new EntityNotFoundException(String.format("There is no file with id='%d'", id)));
+    public FileDto findFileById(UUID id) throws EntityNotFoundException{
+        return mapper.fileToFileDto(repository.findById(id).orElseThrow(() -> new EntityNotFoundException(String.format("There is no file with id='%d'", id))));
     }
 
-    // public List<FileDto> findFilesByAuthor(UUID authorId) {
-    //     List<FileDto> files = findAllFiles();
-    //     return files.stream().filter(f -> f.getAuthorId().toString().equals(authorId.toString())).collect(Collectors.toList());
-    // }
-
-    // public Page<File> findAllSorted(Pageable pageable) {
-    //     return repository.findAll(pageable);
-    // }
-
-    public Page<File> findAllSorted(Sort sort, Integer page, Integer valPerPage) {
-        List<File> files = repository.findAll(PageRequest.of(page, valPerPage, sort)).toList();
-        return new PageImpl<File>(files);
+    public List<FileDto> findFilesByAuthor(UUID authorId) {
+        return repository.findByAuthorId(authorId).stream().map(f->mapper.fileToFileDto(f)).collect(Collectors.toList());
     }
 
-    public File create(CreateFileDto dto) throws IOException {
-        return repository.save(mapper.createFileDtoToFile(dto));
+    public Page<FileDto> findAllSorted(Sort sort, Integer page, Integer valPerPage) {
+        List<FileDto> files = repository.findAll(PageRequest.of(page, valPerPage, sort)).stream().map(f->mapper.fileToFileDto(f)).collect(Collectors.toList());
+        return new PageImpl<FileDto>(files);
     }
 
-    public File update(UUID id, UpdateFileDto dto) throws IOException {
-        return repository.save(mapper.updateFileDtoToFile(dto));
+    public FileDto create(CreateFileDto dto) throws IOException {
+        File file = repository.save(mapper.createFileDtoToFile(dto));
+        return mapper.fileToFileDto(file);
+    }
+
+    public FileDto update(UUID id, UpdateFileDto dto) throws IOException {
+        File file = repository.save(mapper.updateFileDtoToFile(dto));
+        return mapper.fileToFileDto(file);
     }
 
     public void deleteById(UUID id) {
